cupt (2.5.10~) UNRELEASED; urgency=low

  * 

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 25 Jun 2013 20:00:45 +0300

cupt (2.5.9) unstable; urgency=low

  * lib:
    - download/uri:
      - Constructor: accept single- or triple-slashes after the ':' character,
        which is the usual situation for 'file' or 'copy' schemes.
        Thanks to Alexey Ivanov for the report. (Closes: #683873)
    - system/nativeresolver:
      - Fixed 'internal error: conflicting elements' in the corner case when
        one version of package A depends on a certain version which in turn
        depends on a different version of package A, plus additional
        circumstances apply.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 15 Aug 2012 19:45:35 +0300

cupt (2.5.8) unstable; urgency=low

  * lib:
    - cache/binaryversion:
      - 'parseFromFile': the field 'Description-md5' should be parsed together
        with info-only fields even if Version::parseOthers is off.
        (Closes: #681340)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 14 Jul 2012 13:55:39 +0300

cupt (2.5.7) unstable; urgency=low

  * lib:
    - cache:
      - Parsing sources list: parse afterline comments properly. Thanks to
        Alexey Ivanov for the report. (Closes: #678345)
  * doc:
    - tutorial:
      - 'Disadvantages': said specificly that multiarch is not supported.
  * po:
    - Added German translation by Chris Leick. (Closes: #677758)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 28 Jun 2012 14:03:52 +0300

cupt (2.5.6) unstable; urgency=low

  * lib:
    - system/worker:
      - Fatal errors should be logged regardless of the logging level.
      - Work around FreeBSD kernels on which mkdir(2) sometimes return EISDIR.
        Thanks to goneri@rulezlan.org for the report. (Closes: #675760)
  * po:
    - Added French translation by Julien Patriarca. (Closes: #675689)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 08 Jun 2012 13:01:55 +0300
